# odoo-intelligence-mcp

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  MCP_TOOLS_COMPARISON.md  README.md  debug_startup.py  pyproject.toml
.github/: dependabot.yml  github-repo-workflow.json  github.json
.github/workflows/: ci.yml
src/: py.typed
src/odoo_intelligence_mcp/: cli.py  server.py
src/odoo_intelligence_mcp/core/: env.py  utils.py
src/odoo_intelligence_mcp/models/: __init__.py  base.py  odoo_models.py  responses.py
src/odoo_intelligence_mcp/services/: __init__.py  base_service.py  field_analyzer.py  model_inspector.py  odoo_analyzer.py
src/odoo_intelligence_mcp/tools/addon/: __init__.py  addon_dependencies.py  debug_paths.py  get_addon_paths.py  module_structure.py
src/odoo_intelligence_mcp/tools/analysis/: __init__.py  pattern_analysis.py  pattern_analysis_fs.py  performance_analysis.py  workflow_states.py  workflow_states_fs.py
src/odoo_intelligence_mcp/tools/ast/: __init__.py  ast_index.py
src/odoo_intelligence_mcp/tools/code/: __init__.py  execute_code.py  read_odoo_file.py  search_code.py
src/odoo_intelligence_mcp/tools/common/: fs_utils.py
src/odoo_intelligence_mcp/tools/development/: test_runner.py
src/odoo_intelligence_mcp/tools/field/: __init__.py  _common.py  field_dependencies.py  field_usages.py  field_value_analyzer.py  resolve_dynamic_fields.py  search_field_properties.py  search_field_properties_fs.py  search_field_type.py  search_field_type_fs.py
src/odoo_intelligence_mcp/tools/filesystem/: find_files.py
src/odoo_intelligence_mcp/tools/model/: __init__.py  find_method.py  inheritance_chain.py  inheritance_chain_fs.py  model_info.py  model_info_fs.py  model_relationships.py  model_relationships_fs.py  search_decorators.py  search_models.py  search_models_fs.py  view_model_usage.py
src/odoo_intelligence_mcp/tools/operations/: __init__.py  container_logs.py  container_restart.py  container_status.py  module_update.py
src/odoo_intelligence_mcp/tools/security/: __init__.py  permission_checker.py
src/odoo_intelligence_mcp/type_defs/: odoo_types.py  odoo_types.pyi  protocols.py  responses.py
src/odoo_intelligence_mcp/utils/: docker_utils.py  error_utils.py  model_utils.py  response_utils.py  security_utils.py  static_analyzer.py
tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py  fixtures.py  helpers.py  mock_types.py  test_coroutine_issues.py  test_utils.py  types.py
tests/fixtures/: __init__.py  common.py  docker.py  odoo.py  types.py
tests/helpers/: docker_test_helpers.py
tests/integration/: test_docker_failure_modes.py  test_docker_integration.py  test_error_handling_integration.py  test_execute_code_integration.py  test_field_access_issue.py  test_field_usages_integration.py  test_inheritance_chain_integration.py  test_mcp_protocol.py  test_mcp_stdio.py  test_model_info_integration.py  test_model_relationships_integration.py  test_performance_analysis_integration.py  test_real_docker_integration.py  test_search_models_integration.py  test_security_boundaries.py  test_server_handlers.py  test_server_integration.py  test_tool_contracts.py
tests/unit/: test_cli.py  test_error_handling.py
tests/unit/core/: test_coroutine_issues.py  test_docker_registry.py  test_env.py  test_env_registry.py  test_env_resolution.py  test_utils.py
tests/unit/models/: test_base.py  test_odoo_models.py  test_responses.py
tests/unit/server/: test_aliases.py
tests/unit/services/: test_base_service.py  test_field_analyzer_service.py  test_model_inspector.py  test_odoo_analyzer.py
tests/unit/tools/: TEST_COROUTINE_FIXES.md
tests/unit/tools/addon/: test_addon_dependencies.py  test_full_addon_dependencies.py  test_full_module_structure.py  test_module_structure.py
tests/unit/tools/analysis/: test_analysis_query.py  test_pattern_analysis.py  test_performance_analysis.py  test_workflow_states.py
tests/unit/tools/ast/: test_ast_index.py
tests/unit/tools/code/: test_execute_code.py  test_full_search_code.py  test_read_odoo_file.py  test_search_code.py
tests/unit/tools/development/: test_test_runner.py
tests/unit/tools/field/: test_field_dependencies.py  test_field_search_registry.py  test_field_usages.py  test_field_value_analyzer.py  test_resolve_dynamic_fields.py  test_search_field_properties.py  test_search_field_type.py
tests/unit/tools/filesystem/: test_find_files.py
tests/unit/tools/model/: test_find_method.py  test_inheritance_chain.py  test_model_info.py  test_model_relationships.py  test_search_decorators.py  test_search_decorators_registry.py  test_search_models.py  test_view_model_usage.py
tests/unit/tools/operations/: test_odoo_install_module.py  test_odoo_logs.py  test_odoo_restart.py  test_odoo_shell.py  test_odoo_status.py  test_odoo_update_module.py
tests/unit/tools/security/: test_permission_checker.py
tests/unit/utils/: test_docker_utils.py  test_error_utils.py  test_model_utils.py  test_response_utils.py  test_security_utils.py  test_static_analyzer.py
